# mediocr-dicom

./: .gitignore  CMakeLists.txt  README
cmake/: Usemediocr-dicom.cmake  mediocr-dicom-config-version.cmake.in  mediocr-dicom-config.cmake.in
cmake/modules/: FindDCMTK.cmake
mediocr-dicom/: dicom_coders.hpp  dicom_file.hpp
src/: dicom_coders.cpp  dicom_file.cpp
